# jobScout

./: LICENSE  README.md  scaffold_jobscout.py
.github/workflows/: ingest_schedule.yml
data/sqlite/: jobscout.db
jobScout/: .env.example  .env.local  .gitignore  pyproject.toml
jobScout/.github/workflows/: ingest_schedule.yml
jobScout/docs/notes/: license-file-name.md
jobScout/scripts/: ingest_to_supabase.py
jobScout/src/jobscout/cli/: main.py
jobScout/src/jobscout/config/: rubric.yaml  settings.py  sources.yaml
jobScout/src/jobscout/connectors/ats/: greenhouse.py  lever.py
jobScout/src/jobscout/domain/: job.py
jobScout/src/jobscout/services/: pipeline.py  scoring.py
jobScout/src/jobscout/storage/: db.py
jobScout/src/jobscout/storage/repositories/: jobs_repo.py
jobScout/web/app/: page.tsx
jobScout/web/app/api/jobs/: route.ts
